# TheoryProject

./: .gitignore  COMPILER_GUIDE.md  README.md  pyproject.toml
src/: codegen.py  compiler.py  grammar_analysis.py  lexer.py  main.py  parser.py  table_parser.py
